# video_face_recognition

./: .gitignore  README.md  run.sh  url.txt
src/: CMakeLists.txt  demo.cpp  det_face_mtcnn.hpp
src/ai_model/: config.ini
src/det_face_id/: init_model.sh
src/det_face_id/include/: det_face_id.hpp
src/det_face_id/libs/linux/gpu/: libdet_face_id.so.515.100.1.0.3.2  libdet_face_mtcnn.so.0.100.2.0.0.9  libnvparsers.so.5  libopencv_highgui.so.3.3  libopencv_imgcodecs.so.3.3  performance_testing_GPU  performance_testing_GPU_for_trt
src/det_face_id/model/: config.ini
src/det_face_mtcnn/: .gitignore  CMakeLists.txt  README.md  manifest.ini
src/det_face_mtcnn/api/: CMakeLists.txt
src/det_face_mtcnn/api/include/: FaceBodyPlugin.h  config.hpp  det_face_mtcnn.hpp  frame_state_detector.hpp
src/det_face_mtcnn/api/src/: FaceBodyPlugin.cpp  config.cpp  det_face_mtcnn.cpp  frame_state_detector.cpp
src/det_face_mtcnn/cmake/: CheckDependencies.cmake
src/det_face_mtcnn/data/: argv.txt  config.ini
src/det_face_mtcnn/data/images/testing/: filelist.sh  list.txt
src/det_face_mtcnn/script_linux/: gen.sh  performance_run_cpu.sh  performance_run_gpu.sh  upload_toftp.sh
src/det_face_mtcnn/script_win/: gen.bat  get3rdParty.bat  performance_run_cpu.bat  performance_run_gpu.bat  readconfig.bat  run.bat  upload_toftp.bat
src/det_face_mtcnn/test/: CMakeLists.txt  demo.cpp  performance_testing.cpp  plugin_demo.cpp
